<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/colorPrimaryDark"

        android:orientation="vertical"
        tools:context=".activities.MainActivity"
        android:id="@+id/scrollView"
        android:layout_above="@+id/footer"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.adeneo.tp_android.app_film.custom_controls.CustomAppBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:textBackButton="@string/btn_backChevron"
                app:textMainTitle="@string/page_title"
                app:mainLayoutColor="@color/colorPrimary"
                >


            </com.adeneo.tp_android.app_film.custom_controls.CustomAppBar>


            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/movie_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/label_About"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:text="@string/label_Titre"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:text="@string/content_Titre"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:text="@string/label_TitreOriginal"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/original_movie_title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:text="@string/content_TitreOriginal"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:text="@string/label_Description"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/movie_description"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:text="@string/content_Description"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:text="@string/label_MotsCles"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/movie_keywords"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:text="@string/content_MotCle"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:padding="15dp"
                android:weightSum="3">


                <Button
                    android:id="@+id/shareButton"
                    style="@style/NormalButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    android:text="@string/btn_Partager"
                    android:drawableLeft="@drawable/share"
                    android:drawablePadding="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"/>

                <Button
                    android:id="@+id/commentButton"
                    style="@style/NormalButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/comment"
                    android:drawablePadding="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:text="@string/btn_Commenter" />

                <Button
                    android:id="@+id/likeButton"
                    style="@style/LikeButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_Aimer"
                    android:drawablePadding="0dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="15dp"
                    />

            </LinearLayout>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/comments_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"

                android:isScrollContainer="false">


            </android.support.v7.widget.RecyclerView>
</android.support.v4.widget.NestedScrollView>
            <!-- <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"

               android:background="@android:color/darker_gray"


               android:gravity="center"

               android:text="@string/content_com"

               android:textColor="@color/white" />

         <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@android:color/darker_gray"
               android:orientation="vertical">



           </LinearLayout>-->


        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/footer"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:focusableInTouchMode="true"
        >

        <EditText
            android:hint="@string/content_say"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/commentEditText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/sendButton"

            android:layout_toStartOf="@+id/sendButton"
            android:layout_alignParentStart="true" />


        <Button
            android:id="@+id/sendButton"
            style="@style/SendButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp" />


    </RelativeLayout>
</RelativeLayout>


<!--s-->